<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lianliankan</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello">欢迎来到连连看游戏</string>
	<string name="main_start">开始游戏</string>
	<string name="main_rank">排行</string>
	<string name="main_setting">设置</string>
	<string name="main_help">帮助</string>
	<string name="main_exit">退出</string>
    <string name="game_score">分数</string>
	<string name="game_time">剩余时间</string>
	<string name="game_hint">提示</string>
	<string name="game_pause">暂停</string>
	<string name="game_reset">重置</string>
    
</resources>
