<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#ddd">
    
    <Button 
        android:id="@+id/main_start_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:gravity="center"
        android:text="@string/main_start"/>
    
    <Button 
        android:id="@+id/main_rank_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignRight="@id/main_start_btn"
        android:layout_below="@id/main_start_btn"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/main_rank"/>
    
    <Button 
        android:id="@+id/main_setting_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignRight="@id/main_start_btn"
        android:layout_below="@id/main_rank_btn"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/main_setting"/>
    
    <Button 
        android:id="@+id/main_help_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignRight="@id/main_start_btn"
        android:layout_below="@id/main_setting_btn"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/main_help"/>
    
    <Button 
        android:id="@+id/main_exit_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignRight="@id/main_start_btn"
        android:layout_below="@id/main_help_btn"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/main_exit"/>

</RelativeLayout>
